--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,7 @@
 :root {
     --primary-accent-color: #0b394c;
     --secondary-accent-color: #2191ce;
+    --primary-accent-color-transparent: rgba(11, 57, 76, .1);
     --primary-text-color: #404040;
     --secondary-text-color: #656565;
     --tertiary-text-color: #a1a1a1;
@@ -35,18 +36,53 @@ a {
 h1 {
     color: var(--primary-accent-color);
     font-size: 3rem;
+    font-weight: 700;
 }
 
-.section-inner {
-    max-width: 800px;
-    margin: 0 auto;
+h2 {
+    color: var(--primary-accent-color);
+    font-size: 1.7rem;
+    font-weight: 600;
+    margin-bottom: 30px;
+    display: inline-block;
+    position: relative;
+}
+
+h2::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: calc(100% + 15px);
+    bottom: 20%;
+    width: 250px;
+    height: 1px;
+    background-color: var(--medium-grey);
+}
+
+h3 {
+    color: var(--primary-accent-color);
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
 p {
-    font-size: 1.1rem;
-    line-height: 1.6;
+    color: var(--primary-text-color);
+    font-size: 1.05rem;
+    line-height: 1.4;
     font-weight: 300;
+    margin-bottom: 15px;
 }
+
+section {
+    z-index: 0;
+}
+
+.section-inner {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 80px 20px;
+}
+
 
 .btn-primary, .btn-secondary, .btn-tertiary {
     padding: 12px 30px;
@@ -96,4 +132,40 @@ p {
 
 .btn-secondary:hover::after {
     width: 110%;
+}
+
+.text-link {
+	position: relative;
+	color: var(--secondary-accent-color);
+	margin: 0;
+}
+
+.text-link svg {
+    height: 15px;
+    fill: var(--secondary-accent-color);
+}
+
+.text-link::after {
+	position: absolute;
+	content: '';
+	display: block;
+	left: 0;
+	bottom: 0;
+	width: 0px;
+	height: 1px;
+	background-color: var(--secondary-accent-color);
+	transition: all 0.25s ease-in-out;
+}
+
+.text-link:hover::after {
+	width: 100%;
+}
+
+@media (max-width: 1000px) {
+}
+
+@media (max-width: 800px) {
+}
+
+@media (max-width: 450px) {
 }
