--- a/src/styles/home-hero.module.css
+++ b/src/styles/home-hero.module.css
@@ -1,18 +1,20 @@
 .home-hero {
-    /*background-color: var(--primary-accent-color);*/
-    height: 100vh;
+    /*height: 100vh;*/
+    margin: 200px 0 100px 0;
     display: flex;
     align-items: center;
 }
 
 .home-hero-inner {
-    max-width: 800px;
+    max-width: 900px;
     margin: 0 auto;
+    padding: 20px;
 }
 
 .home-hero-container {
     display: flex;
     align-items: center;
+    gap: 40px;
 }
 
 .home-hero-img {
@@ -42,10 +44,67 @@
 
 .home-hero-text p {
     margin-bottom: 30px;
+    font-size: 1.1rem;
+    line-height: 1.6;
 }
 
 .home-hero-text .buttons {
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-bottom: 40px;
+}
+
+.home-hero-text .social-links {
+    position: fixed;
+    top: 50%;
+    left: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    transform: translateY(-50%);
+}
+
+.home-hero-text .social-links svg {
+    width: 20px;
+    fill: var(--primary-accent-color);
+    transition: all .3s ease-in-out;
+}
+
+.home-hero-text .social-links svg:hover {
+    fill: var(--secondary-accent-color);
+    transform: translateY(-5px);
+}
+
+@media (max-width: 1000px) {
+}
+
+@media (max-width: 800px) {
+    .home-hero {
+        height: auto;
+        margin-top: 60px;
+    }
+
+    .home-hero-container {
+        flex-direction: column;
+    }
+
+    .home-hero-text {
+        align-items: center;
+        text-align: center;
+    }
+
+    .home-hero-text .social-links {
+        position: relative;
+        top: auto;
+        left: auto;
+        transform: none;
+        flex-direction: row;
+    }
+}
+
+@media (max-width: 450px) {
+    .home-hero-text .buttons {
+        flex-direction: column;
+    }
 }
