Main and secondary projects sections

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,7 +68,7 @@ h3 {
 p {
     color: var(--primary-text-color);
     font-size: 1.05rem;
-    line-height: 1.4;
+    line-height: 1.6;
     font-weight: 300;
     margin-bottom: 15px;
 }
@@ -78,9 +78,9 @@ section {
 }
 
 .section-inner {
-    max-width: 1000px;
+    max-width: 1100px;
     margin: 0 auto;
-    padding: 80px 20px;
+    padding: 80px 20px 80px 90px;
 }
 
 
@@ -135,9 +135,9 @@ section {
 }
 
 .text-link {
-	position: relative;
-	color: var(--secondary-accent-color);
-	margin: 0;
+    position: relative;
+    color: var(--secondary-accent-color);
+    margin: 0;
 }
 
 .text-link svg {
@@ -146,26 +146,45 @@ section {
 }
 
 .text-link::after {
-	position: absolute;
-	content: '';
-	display: block;
-	left: 0;
-	bottom: 0;
-	width: 0px;
-	height: 1px;
-	background-color: var(--secondary-accent-color);
-	transition: all 0.25s ease-in-out;
+    position: absolute;
+    content: '';
+    display: block;
+    left: 0;
+    bottom: 0;
+    width: 0px;
+    height: 1px;
+    background-color: var(--secondary-accent-color);
+    transition: all 0.25s ease-in-out;
 }
 
 .text-link:hover::after {
-	width: 100%;
+    width: 100%;
+}
+
+.disclaimer {
+    color: var(--dark-grey);
+    font-weight: 200;
+    font-size: .9rem;
+    font-style: italic;
 }
 
 @media (max-width: 1000px) {
 }
 
+@media (max-width: 600px) {
+    h2::after {
+        width: 100px;
+    }
+}
+
 @media (max-width: 800px) {
+    .section-inner {
+        padding: 80px 20px;
+    }
 }
 
 @media (max-width: 450px) {
+    h2::after {
+        width: 0;
+    }
 }
