Adding contact form and responsiveness

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -67,9 +67,9 @@ h3 {
 
 p {
     color: var(--primary-text-color);
-    font-size: 1.05rem;
+    font-size: 1.1rem;
     line-height: 1.6;
-    font-weight: 300;
+    font-weight: 200;
     margin-bottom: 15px;
 }
 
@@ -80,7 +80,7 @@ section {
 .section-inner {
     max-width: 1100px;
     margin: 0 auto;
-    padding: 80px 20px 80px 90px;
+    padding: 120px 20px 120px 90px;
 }
 
 
@@ -100,38 +100,26 @@ section {
 
 .btn-secondary {
     background-color: transparent;
-    color: var(--primary-text-color);
-    border: 2px solid var(--secondary-accent-color);
-    transition-delay: .2s;
-    transition-property: color;
-
-}
-
-.btn-tertiary {
-    background-color: transparent;
     color: var(--secondary-text-color);
-    border: 2px solid var(--medium-grey);
-}
-
-.btn-secondary::after {
-    z-index: -10;
-    content: '';
-    width: 0;
-    height: 100%;
-    border-radius: 0 20px 500px 0;
-    left: 0;
-    top: 0;
-    position: absolute;
-    background-color: var(--secondary-accent-color);
-    transition: all .3s ease-in-out;
+    border: 2px solid var(--secondary-accent-color);
+    font-size: 1rem;
+    cursor: pointer;
 }
 
 .btn-secondary:hover {
-    color: white;
+    background-color: var(--primary-accent-color-transparent);
 }
 
-.btn-secondary:hover::after {
-    width: 110%;
+.btn-tertiary {
+    font-size: 1rem;
+    background-color: transparent;
+    color: var(--secondary-text-color);
+    border: 2px solid var(--medium-grey);
+    cursor: pointer;
+}
+
+.btn-tertiary:hover {
+    border-color: var(--secondary-accent-color);
 }
 
 .text-link {
