--- a/src/styles/blog-article.module.css
+++ b/src/styles/blog-article.module.css
@@ -1,15 +1,18 @@
 article {
     max-width: 900px;
     margin: 200px auto 140px auto;
-    padding: 0 20px;
+    padding: 0 20px 0 90px;
 }
 
 .blog-article-header {
     text-align: center;
+    max-width: 700px;
+    margin: 0 auto;
 }
 
 .blog-article-header h1 {
     font-size: 2.5rem;
+    line-height: 1.3;
     color: var(--primary-accent-color);
     margin-bottom: 10px;
 }
@@ -96,6 +99,10 @@ article {
     article {
         margin: 70px auto 140px auto;
         padding: 0 20px;
+    }
+
+    .blog-article-header img {
+        width: 100%;
     }
 }
 
