--- a/src/styles/home-contact.module.css
+++ b/src/styles/home-contact.module.css
@@ -82,7 +82,7 @@ form button {
     width: 13px;
     height: 13px;
     border-radius: 50%;
-    background: var(--secondary-accent-color);
+    background: var(--primary-accent-color);
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
 
