--- a/src/styles/home-hero.module.css
+++ b/src/styles/home-hero.module.css
@@ -1,6 +1,6 @@
 .home-hero {
     /*height: 100vh;*/
-    margin: 200px 0 100px 0;
+    margin: 200px 0 0 0;
     display: flex;
     align-items: center;
 }
@@ -55,30 +55,6 @@
     margin-bottom: 40px;
 }
 
-.home-hero-text .social-links {
-    position: fixed;
-    top: 50%;
-    left: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    transform: translateY(-50%);
-    padding: 15px 10px;
-    border-radius: var(--border-radius-main);
-    background-color: var(--primary-accent-color-transparent);
-}
-
-.home-hero-text .social-links svg {
-    width: 20px;
-    fill: var(--primary-accent-color);
-    transition: all .3s ease-in-out;
-}
-
-.home-hero-text .social-links svg:hover {
-    fill: var(--secondary-accent-color);
-    transform: translateY(-5px);
-}
-
 @media (max-width: 1000px) {
 }
 
@@ -100,23 +76,13 @@
         align-items: center;
         text-align: center;
     }
-
-    .home-hero-text .social-links {
-        position: relative;
-        top: auto;
-        left: auto;
-        transform: none;
-        flex-direction: row;
-        padding: 14px 20px 10px 20px; /*Compensate padding because icon is not perfectly centered vertically*/
-    }
-
-    .home-hero-text .social-links svg {
-        width: 30px;
-    }
 }
 
 @media (max-width: 450px) {
     .home-hero-text .buttons {
         flex-direction: column;
+    }
+    .home-hero-img {
+        max-width: 200px;
     }
 }
