--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
 
 :root {
     --primary-accent-color: #0b394c;
@@ -85,8 +86,8 @@ section {
 
 
 .btn-primary, .btn-secondary, .btn-tertiary {
-    padding: 12px 30px;
-    border-radius: 300px;
+    padding: 8px 20px;
+    border-radius: var(--border-radius-main);
     box-shadow: 0 10px 10px -8px #d5d5d5;
     position: relative;
     overflow: hidden;
