--- a/src/styles/nav.module.css
+++ b/src/styles/nav.module.css
@@ -1,14 +1,15 @@
 nav {
-    height: 100px;
+    /*height: 90px;*/
     /*display: flex;*/
     /*align-items: center;*/
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 20px;
+    padding: 15px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 4px 6px -1px, rgba(0, 0, 0, 0.04) 0px 2px 4px -1px;
     z-index: 20;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(25px);
 }
 
 .nav-container {
@@ -24,6 +25,11 @@ nav {
     display: flex;
     gap: 60px;
     transition: all .7s ease-in-out;
+}
+
+.nav-menu li {
+    font-size: .95rem;
+    font-weight: 300;
 }
 
 
